--- a/unreleased.css
+++ b/unreleased.css
@@ -10,9 +10,8 @@ canvas {
 
 /* From here on it's styling the sliders */
 
-
 /* Styles the whole slider */
-.mySliders{
+.volSlider{
   width: 80px;
   background-color: transparent;
   
@@ -20,27 +19,24 @@ canvas {
   -webkit-appearance: none;
 }
 
-
 /* These styles affect what happens when the cursor is focused on the slider (i.e. clicking it) */
-.mySliders:focus {
-  
+.volSlider:focus {  
   /* Stops the default outline showing up */
   outline: none;
 }
 
 /* This is the "track" that the slider sits on  */
-.mySliders::-webkit-slider-runnable-track {
+.volSlider::-webkit-slider-runnable-track {
   background: #D2D2D2;
   height: 3px;
   -webkit-appearance: none;
   
   /* Turns the cursor into the hand pointer icon when hovering over the slider  */
   cursor: pointer;
-  
 }
 
 /* This is the moveable bit of the slider, known as the "thumb"*/
-.mySliders::-webkit-slider-thumb {
+.volSlider::-webkit-slider-thumb {
   width: 12px;
   height: 12px;
   background: #B4B4B4;
@@ -49,9 +45,7 @@ canvas {
   
   /* negative top padding moves it up */
   margin-top: -5px;
-
   
   /* Border radius gives rounded corners, if they're big enough, you end up with circles */
   border-radius: 6px;
-  
 }
